@@ -2006,7 +2006,7 @@ sub handle_single_transform_list ($$$@)
                 # If we're generating dependencies, we also want
                 # to make sure that the appropriate subdir of the
                 # .deps directory is created.
-		push (@dep_list, &require_build_directory (".deps/$directory"))
+		push (@dep_list, &require_build_directory ('$(DEPDIR)/' . $directory))
 		    if ($use_dependencies);
             }
 
