@@ -1,3 +1,9 @@
+2001-07-21  Tim Van Holder  <tim.van.holder@pandora.be>
+
+	* automake.in (handle_single_transform_list): Use $(DEPDIR)
+	instead of hardcoding '.deps'.
+	* m4/depend.m4 (AM_SET_DEPDIR): Sync with libtool's libdir check.
+
 2001-07-20  Derek Price  <dprice@collab.net>
 
 	* m4/header.m4 (AM_CONFIG_HEADER): Create stamp-h files in the correct
